# BaleBot

./: .gitignore  README.md  pyproject.toml
config/: settings.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_alter_commandstat_unique_together.py
pricebot/: apps.py
pricebot/management/commands/: run_pricebot.py
pricebot/services/: bot_handlers.py  formatter.py  keyboards.py  price_api.py
pricebot/tests/: conftest.py  test_api.py  test_formatter.py  test_handlers.py  test_keyboards.py  test_models.py
