[project]
name = "bale-bots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-django>=4.12.0",
    "python-decouple>=3.8",
    "python-telegram-bot>=22.8",
    "requests>=2.34.2",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
asyncio_mode = "auto"
addopts = "--reuse-db"